force-app/main/default/objects/Bus_Garage_Association__c/Bus_Garage_Association__c.object-meta.xml
<CustomObject>
    <description>Junction object to link buses to garages that can service them.</description>
    <label>Bus Garage Association</label>
    <nameField>
        <displayFormat>BG-{000000}</displayFormat>
        <label>Bus Garage Association Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bus Garage Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>