force-app/main/default/objects/Bus_Garage_Association__c/fields/Bus__c.field-meta.xml
<CustomField>
    <fullName>Bus__c</fullName>
    <inlineHelpText>The bus that is associated with the garage.</inlineHelpText>
    <label>Bus</label>
    <referenceTo>Bus__c</referenceTo>
    <relationshipLabel>Garages That Can Service Bus</relationshipLabel>
    <relationshipName>Bus_Garage_Associations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>