force-app/main/default/objects/Bus_Garage_Association__c/fields/Distance__c.field-meta.xml
<CustomField>
    <fullName>Distance__c</fullName>
    <formula>DISTANCE(GEOLOCATION(Bus__r.Last_Reported_Location__Latitude__s, Bus__r.Last_Reported_Location__Longitude__s), GEOLOCATION( Garage__r.Location__Latitude__s, Garage__r.Location__Longitude__s), &apos;mi&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The distance between the bus&apos;s current location and the garage&apos;s location in miles.</inlineHelpText>
    <label>Distance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>