force-app/main/default/objects/Bus_Garage_Association__c/fields/Garage__c.field-meta.xml
<CustomField>
    <fullName>Garage__c</fullName>
    <inlineHelpText>The garage associated with the bus.</inlineHelpText>
    <label>Garage</label>
    <referenceTo>Garage__c</referenceTo>
    <relationshipLabel>Buses Garage Can Service</relationshipLabel>
    <relationshipName>Bus_Garage_Associations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>